commit some updates.

--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-	"name": "PROJ",
-	"title": "Leon.Cai",
-	"description": "FE BULID SCRIPT",
-	"version": "0.5.4",
-	"dependencies": {},
-	"devDependencies": {
-		"art-template": "*",
-		"gulp-autoprefixer": "*",
-		"gulp-imagemin": "*",
-		"gulp-less": "*",
-		"gulp-rename": "*",
-		"gulp-uglify": "*",
-		"native-msg-box": "*",
-		"gulp-clean": "*",
-		"gulp-concat": "*",
-		"gulp-minify-css": "*",
-		"gulp-notify": "*",
-		"gulp-replace": "*",
-		"gulp-plumber": "*",
-		"gulp-livereload": "*",
-		"gulp-filter": "*",
-		"gulp-if": "*",
-		"gulp-wrapper": "*",
-		"browser-sync": "*",
-		"gulp-file-include": "*"
-	}
+  "name": "PROJ",
+  "title": "Leon.Cai",
+  "description": "FE BULID SCRIPT",
+  "version": "0.5.4",
+  "dependencies": {},
+  "devDependencies": {
+    "art-template": "*",
+    "browser-sync": "*",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-clean": "*",
+    "gulp-concat": "*",
+    "gulp-file-include": "*",
+    "gulp-filter": "*",
+    "gulp-if": "*",
+    "gulp-imagemin": "*",
+    "gulp-less": "^3.0.3",
+    "gulp-livereload": "*",
+    "gulp-minify-css": "*",
+    "gulp-notify": "*",
+    "gulp-plumber": "*",
+    "gulp-rename": "*",
+    "gulp-replace": "*",
+    "gulp-uglify": "*",
+    "gulp-wrapper": "*",
+    "native-msg-box": "*"
+  }
 }
